Fix broken spaces and gaps plays section

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ main {
 
 .sel-play-display {
   flex: 0;
-  height: 60%;
+  width: 70%;
   aspect-ratio: 1;
   background-color: gray;
 }
@@ -37,5 +37,9 @@ main {
 #plays-choices-container > * {
   font-size: 1.2rem;
   font-weight: 600;
-  padding: 20px 30px;
+  padding: 10px 20px;
+}
+
+#plays-ui > *:not(#vs-sign) {
+  justify-content: space-evenly;
 }
